.provarCaches/00D5f000005vwGkEAI/objects/rstk__syconfig__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_syconfig</customHelpPage>
    <description>syconfig__c</description>
    <fields>
        <fullName>rstk__SYCONFIG_USESYDATA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use Data Collection Transaction Object</description>
        <inlineHelpText>When checked, the ability to utilize the SYDATA object and related functionality is enabled (including SYDATAT and SYDATAD),</inlineHelpText>
        <label>Use SYDATA Transaction Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_acctgpackage__c</fullName>
        <inlineHelpText>This field is set automatically depending upon the setting for FinancialForce. 0 = FinancialForce is NOT active, 1= FinancialForce is active.  If you set this value, it will automatically check the FiancialForce Active button.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_allocations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, allocation functionality is enabled.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_arenaint__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the ability to interface with Arena is enabled.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_authfinusers__c</fullName>
        <inlineHelpText>If using Rootstock Financials, this reflects the number of licenses authorized, controlling the number of Financial System User records that can be created.</inlineHelpText>
        <label>Authorized Financial Users</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_autocadint__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>We do not currently support an interface to AutoCAD - for possible future use.</inlineHelpText>
        <label>AutoCAD Interface Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_bypassafv__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Currently Used</inlineHelpText>
        <label>Bypass After Field Validation on Scanner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_configsoe__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Configurable Sales Order Entry can be used to configure products.</inlineHelpText>
        <label>Configurable Sales Order Entry Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_costacctdtl__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, additional Cost elements will be detailed on Cost Transactions.</inlineHelpText>
        <label>Cost Element Account Detail Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_currfslusers__c</fullName>
        <description>This field contains the count of Manufacturing Users in the org designated as Limited FSL Users</description>
        <inlineHelpText>This field contains the count of Manufacturing Users in the org designated as Limited FSL Users</inlineHelpText>
        <label>Current Number of Limited FSL Users</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_currfulusers__c</fullName>
        <inlineHelpText>This field contains the count of Manufacturing Users in the org designated as Full Access Users</inlineHelpText>
        <label>Current Number of Full Access Users</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_currlabusers__c</fullName>
        <inlineHelpText>This field contains the count of Manufacturing Users in the org designated as Labor Charging Users</inlineHelpText>
        <label>Current Number of Labor Charging Users</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_currlimusers__c</fullName>
        <inlineHelpText>This field contains the count of Manufacturing Users in the org designated as Limited Access Users</inlineHelpText>
        <label>Current Number of Limited Access Users</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_currmobusers__c</fullName>
        <inlineHelpText>This field contains the count of Manufacturing Users in the org designated as Mobile Access Users</inlineHelpText>
        <label>Current Number of Mobile Access Users</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_customer__c</fullName>
        <inlineHelpText>Text identifying the customer. Used to enable customer-specific features.  Note that there is no validation done for this field, so an accurate value that drives said customer-specific functionality must be known and used.</inlineHelpText>
        <label>Customer</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_dedicatesoapibatch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, a separate &quot;dedicated&quot; SOAPI batch processor is enabled, so as not to conflict with other queued jobs.</inlineHelpText>
        <label>Dedicated SOAPI Batch Processor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_definelimited__c</fullName>
        <inlineHelpText>This field contains the Limited Access Categories that have been authorized in this org.  Individual Limited Users can be assigned categories from this subset.</inlineHelpText>
        <label>Limited Access Functional Areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Expanded Shop Floor</fullName>
                </value>
                <value>
                    <fullName>FSL</fullName>
                </value>
                <value>
                    <fullName>Inventory Management</fullName>
                </value>
                <value>
                    <fullName>Production Management</fullName>
                </value>
                <value>
                    <fullName>Purchase Order Maintenance</fullName>
                </value>
                <value>
                    <fullName>Purchase Order Receipt</fullName>
                </value>
                <value>
                    <fullName>Requisitions</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Sales Order Maintenance</fullName>
                </value>
                <value>
                    <fullName>Sales Order Fulfillment</fullName>
                </value>
                <value>
                    <fullName>View Only</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__syconfig_delicitemprojon0qty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Icitemproj on 0 Qty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_delicitemsiteprojon0qty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Icitemsiteproj on 0 Qty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_diminventory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>We do not currently support Dimensional Inventory functionality - for possible future use.</inlineHelpText>
        <label>Dimensional Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_disassembly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the ability to utilize Disassembly functionality is enabled.</inlineHelpText>
        <label>Disassembly Module Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_divnumbers__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>The maximum number of Divisions allowed within an org.</inlineHelpText>
        <label>Number of Divisions Active</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_drawloop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drawloop Forms is Active</description>
        <inlineHelpText>When checked, Drawloop is activated.</inlineHelpText>
        <label>Drawloop Forms is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_drpnetchange__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the ability to utilize Net Change DRP functionality is enabled, allowing the running of DRP against only those items that have had a change to DRP requirements, as well as other item-related changes, including the addition of new items.</inlineHelpText>
        <label>Net Change is available for DRP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_entitlements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Entitlements are active and Entitlement Products may be established and used.</inlineHelpText>
        <label>Entitlements Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_estimating__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>We do not currently support Estimating functionality - for possible future use.</inlineHelpText>
        <label>Estimating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_expandedsfuser__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this expands what Shop Floor Users are allowed to do within Rootstock.</inlineHelpText>
        <label>Z_Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_ffacasefld__c</fullName>
        <inlineHelpText>We do not currently support FinancialForce cases - for possible future use.</inlineHelpText>
        <label>FinancialForce Case Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_ffajebatchmode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When using FFA and this field is checked, Journals are transferred in batch mode rather than individually.</inlineHelpText>
        <label>Transfer JE to FFA in Batch Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_ffint__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When this option is checked, the Financial Force Interface will be enabled.  You cannot set this to Active if  FinancialForce is active.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_ffinvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this option is checked FinancalForce Invoicing will  be done using Journals rather than Sales Invoices. This option can only be checked when the Financial Force Interface is active.</inlineHelpText>
        <label>FinancialForce Invoice with Journals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_ffprojidfld__c</fullName>
        <inlineHelpText>This value is used to define the Project ID field used in Financial Force when the Financial Force Project ID option is active. It serves as the name of the Project ID value, similar to a Financial Force Dimension value.</inlineHelpText>
        <label>FinancialForce Project Id Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_financials__c</fullName>
        <inlineHelpText>There are a number of RS supported Financial Interfaces.  If no Financials are used, this can be set to NONE.</inlineHelpText>
        <label>Financial System Interface</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting Seed</fullName>
                </value>
                <value>
                    <fullName>Dynamics AX</fullName>
                </value>
                <value>
                    <fullName>EXO</fullName>
                </value>
                <value>
                    <fullName>FinancialForce</fullName>
                </value>
                <value>
                    <fullName>Intacct</fullName>
                </value>
                <value>
                    <fullName>QuickBooks</fullName>
                </value>
                <value>
                    <fullName>QuickBooks Desktop</fullName>
                </value>
                <value>
                    <fullName>Rootstock</fullName>
                </value>
                <value>
                    <fullName>Workday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__syconfig_frghtothlnd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>We do not currently support Landed Cost - for possible future use.</inlineHelpText>
        <label>Freight - Other Landed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_gradelvl__c</fullName>
        <defaultValue>300</defaultValue>
        <inlineHelpText>Internal Use.  Currently only support a value of 300.</inlineHelpText>
        <label>Grade Level</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_helpurl__c</fullName>
        <inlineHelpText>This is the URL/Location of the Help files</inlineHelpText>
        <label>Help URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_heroku__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To activate Heroku Applications on ORG.</description>
        <inlineHelpText>When checked, indicates that Heroku Applications are active for the given org.</inlineHelpText>
        <label>Heroku Applications Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_icipsactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_intacctxmlid__c</fullName>
        <inlineHelpText>This is the ID of the process Sending information to Intacct.</inlineHelpText>
        <label>Intacct Sender ID</label>
        <length>30</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_intacctxmlpw__c</fullName>
        <inlineHelpText>This is the Password of the process Sending information to Intacct.</inlineHelpText>
        <label>Intacct Sender Password</label>
        <length>30</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_intrdivplng__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>We do not currently support Inter-Division Planning - for possible future use.</inlineHelpText>
        <label>Inter-Division Planning Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_intrsiteplng__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>We do not currently support Inter-Site Planning - for possible future use.</inlineHelpText>
        <label>Inter-Site Planning Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_inventory__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, the Inventory option can be selected on the Division record, enabling the functionality.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_jobcodeact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the ability to utilize Project Job Code functionality is enabled</inlineHelpText>
        <label>Project Job Code Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_jobshopmrp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>We do not currently support Job Shop MRP functionality - for possible future use.</inlineHelpText>
        <label>Job Shop MRP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_labonlywo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the ability to utilize Labor Only functionality is enabled.</inlineHelpText>
        <label>Labor Only Work Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_lastaskqtyoh__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Moment of Last Ask for Qty OH</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_lastaskreceipts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Moment of Last Ask for Receipts</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_lastaskusage__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Moment of Last Ask for Usage</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_manualsched__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When active, this feature accommodates an external Work Order scheduling capability.  When active in a Division, Rootstock scheduling is bypassed and updates to Scheduled and Due Dates do not impact other dates.</inlineHelpText>
        <label>Enable Manual Scheduling Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_maxpoloader__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is an Override to the default limits calculated by Rootstock for daily entries to the POLOADER Object.</inlineHelpText>
        <label>Daily Limit on POLOADER Transactions</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_maxsoapi__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is an Override to the default limits calculated by Rootstock for daily entries to the SOAPI Object.</inlineHelpText>
        <label>Daily Limit on SOAPI Transactions</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_maxsydata__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is an Override to the default limits calculated by Rootstock for daily entries to the SYDATA Object.</inlineHelpText>
        <label>Daily Limit on SYDATA Transactions</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_menulogo__c</fullName>
        <inlineHelpText>This is the URL location that contains the Company Logo</inlineHelpText>
        <label>Menu Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_menutype__c</fullName>
        <inlineHelpText>Controls the configuration of the Rootstock Site Map, although we currently only support 1 - Standard Manufacturing.  The other option of 2 - Distribution is not currently supported - for possible future use.</inlineHelpText>
        <label>Menu Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Standard Manufacturing</fullName>
                    <default>true</default>
                    <label>1 - Standard Manufacturing</label>
                </value>
                <value>
                    <fullName>2 - Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__syconfig_mrp__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, the ability to utilize MRP functionality is enabled.</inlineHelpText>
        <label>MRP Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_mrpnetchange__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the ability to utilize Net Change MRP functionality is enabled, allowing the running of MRP against only those items that have had a change to supplies or demands, as well as other item-related changes, including the addition of new items.</inlineHelpText>
        <label>Net Change is available for MRP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_multicmp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked in conjunction with checking Multi-Divisions Active, allows multiple Companies within an org.</inlineHelpText>
        <label>Multiple Companies Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_multidiv__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, the ability to add multiple divisions within a company is enabled.  This option MUST be checked if Multiple Companies exist.</inlineHelpText>
        <label>Multi-Division Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_multimach__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>We do not currently support multi-machine Scheduling - for possible future use.</inlineHelpText>
        <label>Multi Machine Scheduling (Future Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_novendacct__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>With this option active, the Rootstock Vendor exists without an associated Salesforce Account.</inlineHelpText>
        <label>No Salesforce Account for Vendors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_numbauthusers__c</fullName>
        <defaultValue>50</defaultValue>
        <inlineHelpText>This is the number of authorized users that are entitled to use the system. This includes Labor Only, and other restricted users, which are controlled through other control mechanisms.</inlineHelpText>
        <label>Number of Full Access Users</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_numbfslusers__c</fullName>
        <description>This field carries the number of Limited FSL Users licensed in this org.</description>
        <inlineHelpText>This field carries the number of Limited FSL Users licensed in this org.</inlineHelpText>
        <label>Number of Limited FSL Users</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_numblaboronlyusers__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the number of Labor Only users active for this installation, which is controlled at the Mfg User level.</inlineHelpText>
        <label>Number of Labor Charging Users</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_numblimitedusers__c</fullName>
        <inlineHelpText>This field carries the number of Limited Access Users licensed in this org.</inlineHelpText>
        <label>Number of Limited Access Users</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_numbmobile__c</fullName>
        <inlineHelpText>This field carries the number of Rootstock Mobile Users licensed in this org.</inlineHelpText>
        <label>Number of Mobile Access Users</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_numbpayusers__c</fullName>
        <inlineHelpText>This is the number of full license users active for this installation.</inlineHelpText>
        <label>Z_Obsolete</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_numlimitedcats__c</fullName>
        <inlineHelpText>This field carries the number of Limited Categories that can be assigned to any one user (selected from the subset of categories defined on the Configuration record).</inlineHelpText>
        <label>Numb Categories Allowed Per Limited User</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_orgcoderootscan__c</fullName>
        <inlineHelpText>Mobile Organization Code assigned to be used with RootScan</inlineHelpText>
        <label>Mobile Organization Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_outsideops__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field activates the Outside Operations feature, allowing for a Purchase Order to be associated with a Work Order Operation, with the PO related costs going directly to WO WIP upon receipt of the PO.</inlineHelpText>
        <label>Outside Operations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_password__c</fullName>
        <inlineHelpText>A password is required to add, edit, or delete this record, and is only available to Rootstock personnel.</inlineHelpText>
        <label>Password Required to Make Changes</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_peac__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field actives the PEAC functionality in an org. (further activation is also required by Division).</inlineHelpText>
        <label>PEAC Period Cost Averaging Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_physinventory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>We do not currently support Physical Inventory functionality - for possible future use.</inlineHelpText>
        <label>Physical Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_poloader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>POLOADER Object Active</description>
        <inlineHelpText>When checked, the ability to use the POLOADER object and related activity is allowed.</inlineHelpText>
        <label>POLOADER Object Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_principlepasscode__c</fullName>
        <inlineHelpText>Only used for the Principle Interface.</inlineHelpText>
        <label>Principle Passcode</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_proditem_bom__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, the ability to utilize Engineering Item and Bill-of-Material functionality is enabled.</inlineHelpText>
        <label>Production Item &amp; BOM Module Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Purchasing functionality is enabled.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_quickbooks__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This option activates the QuickBooks interface</inlineHelpText>
        <label>QuickBooks Interface Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_rcvginsp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>We do not currently have full Receiving / Inspection functionality - for possible future use.</inlineHelpText>
        <label>Receiving / Inspection (Future Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_recurrsvc__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the Recurring Services functionality is enabled.</inlineHelpText>
        <label>Recurring Services Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_restrictdates__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>We do not currently support the Restrict Certain Date Entry functionality - for possible future use.</inlineHelpText>
        <label>Restrict Certain Date Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_revenova__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the ability to interface with Revenova is enabled.</inlineHelpText>
        <label>Revenova Interface Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_revinv__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Revision Controlled Inventory is active for this org</inlineHelpText>
        <label>Revision Controlled Inventory Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_rootdox__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, RootForms are enabled.</inlineHelpText>
        <label>RootForms Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_rsordpayid__c</fullName>
        <inlineHelpText>The Order Payment &quot;gateway&quot; identifier for the given software that will be processing the payment transactions, in which for our case is Rootstock. In PayPal, this is referred to as the &apos;BN Number&apos;.</inlineHelpText>
        <label>Order Payment Software ID</label>
        <length>30</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_sales__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, the ability to use Sales Orders functionality is active. The Sales Order function also requires that the Production Item, BOM and Inventory Modules are active.</inlineHelpText>
        <label>Sales Order Module Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_scheduling__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, the use of Scheduling functionality is enabled.</inlineHelpText>
        <label>Scheduling Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_selectissue__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, an alternative method for assigning locations and quantities will be used</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syconfig_sfrootscan__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of licenses for limited (Shop Floor Only) Mobile RootScan functionality, controlling how many users are allowed to use the restricted Shop Floor Only Mobile functionality.</inlineHelpText>
        <label>Number of Labor Only RootScan Users</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>